<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_two"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/black_button"
        android:orientation="vertical"
        android:padding="10dp" >

        <ToggleButton
            android:id="@+id/toggleButtonOnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/donwloadCA"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/donwloadCA"
            android:layout_marginTop="99dp"
            android:background="@drawable/check"
            android:textColor="#bbbbbb"
            android:textOff="@string/off_proxy"
            android:textOn="@string/on_proxy"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/donwloadCA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_btn_arsenic"
            android:text="@string/CA"
            android:textColor="#bbbbbb"
            android:textStyle="bold"
            android:width="190dp" 
            android:textSize="14dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_btn_arsenic"
        android:gravity="center_horizontal"
        android:padding="20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingBottom="0dp"
            android:src="@drawable/masts2_250" />
    </LinearLayout>

</RelativeLayout>