<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_two"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    
    
     <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_btn_arsenic"
        android:orientation="horizontal"
        android:weightSum="100" >


         
        
      <RelativeLayout
            android:id="@+id/top_layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="center_vertical|center_horizontal" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/Pure_white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
      
        
    </RelativeLayout>
    
   <RelativeLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/top_layout"
        android:layout_alignRight="@+id/top_layout"
        android:layout_below="@+id/top_layout"
        android:background="@drawable/black_button"
        android:orientation="vertical"
        android:weightSum="100" >
       <RelativeLayout
            android:id="@+id/status_progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:background="@drawable/notification_screen_color"
            android:gravity="bottom"
            android:orientation="vertical"
             >
            <ListView
                android:id="@+id/status_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/notification_screen_color"
                
                />
           
            <ProgressBar
                android:id="@+id/requestbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:progress="50"
                android:progressDrawable="@drawable/notification_loading_bar"
                android:tag="Current Status"
                android:textDirection="inherit"
                android:visibility="invisible" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_alignLeft="@+id/status_progress_layout"
            android:layout_alignParentBottom="true"
            android:background="@drawable/black_button"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:weightSum="100" >

            <Button
                android:id="@+id/start_service"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/stop_service"
                android:layout_alignBottom="@+id/stop_service"
                android:layout_alignParentLeft="true"
                android:background="@drawable/custom_btn_arsenic"
                android:onClick="onClickStartServie"
                android:text="@string/start"
                android:textColor="#BBBBBB"
                android:textStyle="bold"
                android:width="90dp" />

            <Button
                android:id="@+id/stop_service"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/custom_btn_arsenic"
                android:onClick="onClickStopService"
                android:text="@string/stop"
                android:textColor="#BBBBBB"
                android:textStyle="bold"
                android:width="90dp" />

            <Button
                android:id="@+id/vproxy"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_btn_arsenic"
                android:onClick="onClickVProxy"
                android:text="@string/mass_proxy"
                android:textColor="#BBBBBB"
                android:textStyle="bold"
                android:width="90dp" />
        </RelativeLayout>

       

    </RelativeLayout>
     
     
</RelativeLayout>